--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "animate.css": "^4.1.1",
     "framer-motion": "^11.3.19",
     "lucide-react": "^0.417.0",
