--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.3",
     "framer-motion": "^11.3.19",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-hook-form": "^7.52.2",
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
