--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@heroicons/react": "^2.1.5",
     "animate.css": "^4.1.1",
     "axios": "^1.7.3",
-    "framer-motion": "^11.3.19",
+    "framer-motion": "^11.3.28",
     "lodash": "^4.17.21",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.25.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "react-typed": "^2.0.12",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
