--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.25.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "react-typed": "^2.0.12",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
